--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="description" content="" />
-	<meta name="author" content="" />
-	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
-	<title></title>
-	<link href="static/main.css" rel="stylesheet" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <meta name="viewport"
+        content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
+    <title>Corset Image Compressor - Locally optimize your images</title>
+    <link href="static/main.css" rel="stylesheet" />
 </head>
+
 <body>
     <script src="static/jszip.min.js"></script>
-    <input type="file" id="upload-input" webkitdirectory multiple directory/>
 
+    <h1 class="title">Corset Image Compressor</h1>
+    <h2 class="subtitle">A bulk image compressor focused on privacy and ease of use</h2>
+
+    <div class="main-content">
+        <div class="function-selector">
+            <button class="slide-selector active" id="selector-folder">Entire Folder</button>
+            <button class="slide-selector" id="selector-files">Some Images</button>
+        </div>
+
+        <input type="file" id="upload-input" webkitdirectory multiple directory />
+
+        <div class="info-container">
+        </div>
+    </div>
     <script src="static/index.js"></script>
 </body>
+
 </html>
