--- a/index.html
+++ b/index.html
@@ -18,12 +18,21 @@
     <h2 class="subtitle">A bulk image compressor focused on privacy and ease of use</h2>
 
     <div class="main-content">
-        <div class="function-selector">
+        <div id="function-selector" class="option-section">
             <button class="slide-selector active" id="selector-folder">Entire Folder</button>
             <button class="slide-selector" id="selector-files">Some Images</button>
         </div>
 
+        <div id="compression-options" class="option-section">
+            <select id="format-picker">
+                <option value="webp">Webp</option>
+                <option value="jpeg" selected>Jpeg</option>
+            </select>
+            <input id="compression-factor" value="0.8" type="number" min="0" max="1" step="0.01">
+        </div>
+
         <input type="file" id="upload-input" webkitdirectory multiple directory />
+        <button id="begin-compression" onclick="compress()" class="compress-button">Compress images</button>
 
         <div class="info-container">
         </div>
