--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 </head>
 
 <body>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <p>Convirtiendo imagenes</p>
+            <p id="progress"></p>
+        </div>
+    </div>
     <div class="main-card">
         <script src="static/jszip.min.js"></script>
 
