Fixed error where failed to compress images would not appear in zip

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="modal-content">
             <p>Convirtiendo imagenes</p>
             <p id="progress"></p>
+            <p id="errors"></p>
         </div>
     </div>
     <div class="main-card">
